--- a/config/cable.yml
+++ b/config/cable.yml
@@ -6,5 +6,6 @@ test:
 
 production:
   adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
-  channel_prefix: jcars_app_production
+  url: <%= ENV.fetch("REDIS_URL") 
+  
+  channel_prefix: jcars-app_production
