--- a/config/cable.yml
+++ b/config/cable.yml
@@ -6,8 +6,7 @@ test:
 
 production:
   adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") 
-  
+  url: <%= ENV.fetch("REDIS_URL") %>
   channel_prefix: jcars-app_production
   ssl_params:
-  verify_mode: OpenSSL::SSL::VERIFY_NONE
+    verify_mode: OpenSSL::SSL::VERIFY_NONE
