--- a/config/cable.yml
+++ b/config/cable.yml
@@ -4,9 +4,13 @@ development:
 test:
   adapter: test
 
+test:
+  adapter: redis
+  url: redis://localhost:6379/1
+  channel_prefix: jcars_test
+
 production:
   adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") %>
-  channel_prefix: jcars-app_production
-  ssl_params:
-    verify_mode: OpenSSL::SSL::VERIFY_NONE
+  url: ENV['REDIS_URL']
+  channel_prefix: jcars_production
+  ssl: true
