--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,16 +1,14 @@
 development:
   adapter: async
 
-test:
-  adapter: test
 
 test:
   adapter: redis
   url: redis://localhost:6379/1
-  channel_prefix: jcars_test
+  channel_prefix: jcars-app_test
 
 production:
   adapter: redis
-  url: ENV['REDIS_URL']
-  channel_prefix: jcars_production
+  url: <%= ENV['REDIS_URL'] %>
+  channel_prefix: jcars-app_production
   ssl: true
